disks/pcx86/windows/1.03a/README.md
---
layout: page
title: Microsoft Windows 1.03a
permalink: /disks/pcx86/windows/1.03a/
redirect_from:
  - /disks/pc/windows/1.03a/
---

Microsoft Windows 1.03a
---

These Windows 1.03 disks are from the PCjs private collection.  They may have been Microsoft-internal disks designed
for use with the Windows 1.03 SDK, since they include two additional disks containing Windows SYM files.  Consequently,
they have been designated 1.03a.

Directory listings of the eight 360Kb diskettes are provided below.

### Directory of Windows 1.03a (SETUP)

	 Volume in drive A has no label
	
	Directory of A:\
	
	SETUP    LBL         8 07-29-86  11:44p
	SETUP    EXE     36676 06-30-86   5:57p
	KERNEL   EXE     34063 08-06-86   2:59p
	SYSTEM   DRV      2663 07-09-86   3:15p
	USA      DRV      4005 07-20-86   5:27p
	UK       DRV      4009 07-20-86   5:27p
	GERMANY  DRV      4758 07-20-86   5:27p
	FRANCE   DRV      4773 07-20-86   5:27p
	ITALY    DRV      4027 07-20-86   5:27p
	SPAIN    DRV      4630 07-20-86   5:27p
	SWEDEN   DRV      4649 07-20-86   5:28p
	NORWAY   DRV      4649 07-20-86   5:28p
	DENMARK  DRV      4649 07-20-86   5:28p
	ATTKBD   DRV      3903 05-22-86   4:21p
	NOMOUSE  DRV      1592 05-22-86  10:42a
	MOUSE    DRV      3360 08-07-86   4:20p
	MSMOUSE1 DRV      1966 05-22-86  10:45a
	MSMOUSE2 DRV      1966 05-22-86  10:45a
	LMOUSE   DRV      2661 05-02-86   5:47p
	LPC      DRV      2438 05-22-86  10:41a
	FTG      DRV      1961 05-22-86  10:48a
	JOYMOUSE DRV      2114 05-22-86  10:35a
	ATTMOUSE DRV      2305 05-22-86   2:30p
	CGA      DRV     13008 06-24-86   8:39p
	HERCULES DRV     15776 06-24-86   8:41p
	EGAMONO  DRV     13952 06-24-86   8:36p
	EGAHIBW  DRV     13952 06-24-86   8:35p
	EGALORES DRV     15648 06-24-86   8:46p
	EGAHIRES DRV     17536 12-16-86   4:45p
	ATTDC    DRV     15776 05-23-86   5:22p
	ATTDEB   DRV     17824 05-23-86   2:23p
	GENIUS   DRV     15216 12-19-85  10:25p
	SOUND    DRV      5853 05-22-86  11:49a
	COMM     DRV      4860 05-22-86   9:01a
	LASRHARD TXT       372 06-11-86  11:23a
	LASRSOFT TXT       372 06-11-86  11:22a
	LOFONTS  FON      5552 07-29-86   4:42p
	HIFONTS  FON      7472 07-29-86   4:42p
	FONTS400 FON      7952 07-29-86   4:42p
	RAMDRIVE SYS      6680 08-01-86   5:59a
	EMM      PC      12898 07-30-85   5:15p
	EMM      AT      12874 07-30-85   5:33p
	WRITE    DAT        47 07-29-86  11:47p
	       43 file(s)     341445 bytes
	
	Total files listed:
	       43 file(s)     341445 bytes
	                        1024 bytes free

### Directory of Windows 1.03a (BUILD)

	 Volume in drive A is BUILD      
	
	Directory of A:\
	
	BUILD    LBL         8 07-29-86  11:47p
	GDI      EXE     92638 07-11-86   3:23p
	USER     EXE    122416 05-22-86   3:49a
	MSDOSD   EXE      6242 06-23-86   2:32p
	MSDOS    EXE     43104 06-09-86   4:57p
	CGA      GRB      1403 07-16-86  11:07p
	EGALORES GRB      1266 07-16-86  11:07p
	EGAHIRES GRB        15 07-24-85   1:55p
	EGAHIBW  GRB        15 07-24-85   1:55p
	EGAMONO  GRB      1114 07-16-86  11:07p
	HERCULES GRB      1303 07-16-86  11:07p
	WIN      CNF      1936 11-12-85   4:13p
	EGALORES LGO         9 06-27-85  12:29p
	EGAHIRES LGO         9 06-27-85  12:29p
	EGAHIBW  LGO         9 06-27-85  12:29p
	EGAMONO  LGO      2936 08-11-86  11:41a
	HERCULES LGO      3060 08-11-86  11:41a
	CGA      LGO      2937 08-11-86  11:41a
	WIN      INI      2093 05-22-86   1:50p
	WINOLDAP MOD     19824 08-01-86   3:16a
	SPOOLER  EXE     13264 06-30-86   6:09p
	ATTDC    GRB      1307 02-22-86  10:34a
	ATTDEB   GRB        12 05-23-86   1:11p
	GENIUS   GRB         9 07-29-86   3:55p
	GENIUS   LGO         9 06-27-85  12:29p
	ATTDC    LGO      2916 05-28-86  11:30a
	ATTDEB   LGO      3095 05-28-86  11:31a
	MOUSE    DRV      3360 08-07-86   4:20p
	MOUSE    SYM       404 08-07-86   4:21p
	MOUSE    OLD      3358 07-02-86   3:13p
	       30 file(s)     330071 bytes
	
	Total files listed:
	       30 file(s)     330071 bytes
	                       11264 bytes free

### Directory of Windows 1.03a (UTILITY)

	 Volume in drive A has no label
	
	Directory of A:\
	
	UTILITY  LBL        11 07-29-86  11:50p
	README   DOC       148 07-21-86   2:22p
	EPSON    DRV     14352 05-22-86  11:07a
	NEC3550  DRV     22512 05-22-86  10:23a
	HPLASER  DRV     21504 08-06-86  12:52p
	HPLASERP DRV     22864 08-06-86   1:06p
	HP7470A  DRV     16336 07-29-86   2:20p
	HP7475A  DRV     18960 07-29-86   2:14p
	HP7550A  DRV     20384 07-29-86   1:50p
	IBMGRX   DRV     12288 05-22-86  12:28p
	OKI92    DRV     12416 05-22-86  12:59p
	CITOH    DRV     12016 05-22-86  10:58a
	TI850    DRV     11584 05-22-86   1:09p
	LQ1500   DRV     14544 05-22-86  12:39p
	TOSH     DRV     12432 05-22-86  11:27a
	NECP2    DRV     12304 05-22-86  12:49p
	SG10     DRV     14848 05-22-86  11:17a
	EPSONMX  DRV     12176 05-22-86  12:18p
	TTY      DRV      4800 07-10-86   1:52p
	PSCRIPT  DRV     56224 08-13-86  10:26a
	THINKJET DRV     12128 07-10-86  12:00p
	XER4020  DRV     21024 08-14-86   8:05p
	       22 file(s)     345855 bytes
	
	Total files listed:
	       22 file(s)     345855 bytes
	                        6144 bytes free

### Directory of Windows 1.03a (FONT)

	 Volume in drive A has no label
	
	Directory of A:\
	
	FONT     LBL         7 07-29-86  11:52p
	COURA    FON      8720 07-29-86   4:43p
	COURB    FON     12304 07-29-86   4:43p
	COURC    FON      8784 07-29-86   4:43p
	COURD    FON     15136 07-29-86   4:43p
	HELVA    FON     27056 07-29-86   4:44p
	HELVB    FON     37680 07-29-86   4:45p
	HELVC    FON     26624 07-29-86   4:45p
	HELVD    FON     45600 07-29-86   4:45p
	TMSRA    FON     26256 07-29-86   4:46p
	TMSRB    FON     36240 07-29-86   4:46p
	TMSRC    FON     25824 07-29-86   4:47p
	TMSRD    FON     45200 07-29-86   4:47p
	ROMAN    FON     11120 07-09-86   5:19p
	SCRIPT   FON     10304 07-09-86   5:18p
	MODERN   FON      7584 07-09-86   5:18p
	       16 file(s)     344439 bytes
	
	Total files listed:
	       16 file(s)     344439 bytes
	                        9216 bytes free

### Directory of Windows 1.03a (APPS)

	 Volume in drive A is APPS       
	
	Directory of A:\
	
	CALC     EXE     25008 05-22-86   4:33a
	CALENDAR EXE     37552 05-22-86   7:55a
	CARDFILE EXE     36992 05-22-86   4:23a
	CLIPBRD  EXE      9712 05-22-86   6:17a
	CLOCK    EXE      7984 05-22-86   6:08a
	CONTROL  EXE     52704 05-22-86   6:04a
	NOTEPAD  EXE     18736 05-22-86   6:28a
	PAINT    EXE     90176 07-10-86   6:28p
	REVERSI  EXE     14864 05-22-86   4:28a
	TERMINAL EXE     47344 06-12-86  11:22a
	ABC      TXT        42 06-04-85   9:07a
	DOTHIS   TXT       493 10-25-85   1:02p
	       12 file(s)     341607 bytes
	
	Total files listed:
	       12 file(s)     341607 bytes
	                       13312 bytes free

### Directory of Windows 1.03a (PROGRAM)

	 Volume in drive A is WRITE      
	
	Directory of A:\
	
	README   TXT     11196 08-01-86   2:21p
	WRITE    EXE    192176 07-22-86  11:36a
	PRACTICE WRI      2944 09-09-85   3:04p
	PIF          <DIR>     08-11-86   8:29a
	        4 file(s)     206316 bytes
	
	Directory of A:\PIF
	
	.            <DIR>     08-11-86   8:29a
	..           <DIR>     08-11-86   8:29a
	PIFEDIT  EXE     28528 05-22-86   6:35a
	123      PIF       369 10-26-85  12:57p
	123-2    PIF       369 10-26-85  12:58p
	BASIC    PIF       369 10-14-85   6:02p
	BASICA   PIF       369 10-14-85   6:03p
	CHART    PIF       369 09-18-85  11:09a
	CLOUT    PIF       369 06-26-85   2:39p
	DBASE    PIF       369 09-18-85  11:16a
	DBASE2   PIF       369 09-18-85  11:16a
	DBASE3   PIF       369 09-18-85  11:17a
	DW2PG    PIF       369 09-18-85  11:18a
	DW3PG    PIF       369 09-18-85  11:19a
	FILE     PIF       369 09-18-85  11:28a
	FW       PIF       369 07-16-86  12:21p
	FWC      PIF       369 09-18-85  11:29a
	FWT      PIF       369 09-18-85  11:30a
	GRAPH    PIF       369 09-18-85  11:31a
	HTPM     PIF       369 01-03-80   4:23p
	IBMFILE  PIF       369 09-18-85  11:44a
	IBMGRAPH PIF       369 09-18-85  11:45a
	IBMREPRT PIF       369 01-03-80   3:12p
	IBMWRITE PIF       369 01-03-80   3:23p
	LOTUS    PIF       369 10-26-85  12:58p
	LOTUS2   PIF       369 10-26-85   1:17p
	MP       PIF       369 09-18-85  11:35a
	MSACCESS PIF       369 12-18-85   1:09p
	PE       PIF       369 05-01-86   4:45p
	PC-DRAW  PIF       369 09-24-85  10:39a
	PFSACCES PIF       369 01-03-80   3:36p
	PLAN     PIF       369 09-18-85  11:49a
	PROEDIT  PIF       369 09-18-85  11:50a
	PROJ     PIF       369 09-18-85  11:51a
	PROJM    PIF       369 09-18-85  11:52a
	QB       PIF       369 07-19-86  12:29p
	RB5000   PIF       369 11-07-85   5:16p
	RBASE    PIF       369 09-18-85  12:02p
	REPORT   PIF       369 09-18-85  12:03p
	RG       PIF       369 09-18-85  12:04p
	SC3      PIF       369 09-18-85  12:05p
	SCOM     PIF       369 09-18-85  12:06p
	SCOMII   PIF       369 09-18-85  12:06p
	SPELL    PIF       369 09-19-85  11:53a
	SYMPHACC PIF       369 08-27-85   6:37a
	SYMPHONY PIF       369 09-18-85  12:13p
	TURBO    PIF       369 09-18-85  12:13p
	VX       PIF       369 01-03-80   3:45p
	WORD     PIF       369 11-01-85   1:06p
	WORDEGA  PIF       369 11-01-85   1:08p
	WP       PIF       369 09-18-85  12:18p
	WRDPERF  PIF       369 08-06-85   4:48p
	WRITE    PIF       369 09-18-85  12:19p
	WS       PIF       369 09-18-85  12:20p
	WS2      PIF       369 07-16-86  12:21p
	XTALK    PIF       369 09-18-85  12:21p
	XYWRITE  PIF       369 01-03-80   1:31p
	AMFV     PIF       369 08-16-86   3:56p
	       58 file(s)      48823 bytes
	
	Total files listed:
	       62 file(s)     255139 bytes
	                       68608 bytes free

### Directory of Windows 1.03a (SYMBOLS A)

	 Volume in drive A has no label
	
	Directory of A:\
	
	GETSYM   BAT       676 11-07-85   8:13a
	RUNWIN   BAT       130 07-25-85  10:18a
	WRITE    SYM     20036 07-22-86  11:36a
	KEYBOARD SYM       388 07-20-86   5:27p
	SYSTEM   SYM       356 07-09-86   3:15p
	SOUND    SYM      1396 05-22-86  11:49a
	COMM     SYM      2788 05-22-86   9:01a
	MOUSE    SYM       404 07-02-86   3:13p
	EPSON    SYM      1188 05-22-86  11:07a
	HEAPWALK EXE     13312 05-22-86   8:46a
	SYMBOLS1 SUM       272 08-06-86  10:40a
	DEBUG        <DIR>     08-11-86   8:32a
	NODEBUG      <DIR>     08-11-86   8:33a
	       13 file(s)      40946 bytes
	
	Directory of A:\DEBUG
	
	.            <DIR>     08-11-86   8:32a
	..           <DIR>     08-11-86   8:32a
	KERNEL   SYM      5860 05-19-86   6:29p
	KERNEL   EXE     41984 05-19-86   6:29p
	GDI      SYM      9524 07-11-86   2:05p
	GDI      EXE     94750 07-11-86   2:05p
	DEBUG    SUM        87 08-06-86  10:41a
	        7 file(s)     152205 bytes
	
	Directory of A:\NODEBUG
	
	.            <DIR>     08-11-86   8:33a
	..           <DIR>     08-11-86   8:33a
	KERNEL   SYM      5540 05-19-86   6:57p
	KERNEL   EXE     34015 05-19-86   6:57p
	GDI      SYM      9508 07-11-86   3:23p
	GDI      EXE     92638 07-11-86   3:23p
	NODEBUG  SUM        87 08-06-86  10:41a
	        7 file(s)     141788 bytes
	
	Total files listed:
	       27 file(s)     334939 bytes
	                       13312 bytes free

### Directory of Windows 1.03a (SYMBOLS B)

	 Volume in drive A has no label
	
	Directory of A:\
	
	MSDOS    SYM      4532 05-22-86   8:29a
	SYMBOLS2 SUM       231 08-06-86  10:48a
	MISC         <DIR>     09-13-86  11:58p
	DEBUG        <DIR>     08-11-86   8:37a
	NODEBUG      <DIR>     08-11-86   8:37a
	        5 file(s)       4763 bytes
	
	Directory of A:\DEBUG
	
	.            <DIR>     08-11-86   8:37a
	..           <DIR>     08-11-86   8:37a
	USER     SYM     19060 05-22-86   2:22a
	USER     EXE    122528 05-22-86   2:23a
	DEBUG    SUM        42 08-06-86  10:43a
	        5 file(s)     141630 bytes
	
	Directory of A:\MISC
	
	.            <DIR>     09-13-86  11:58p
	..           <DIR>     09-13-86  11:58p
	BIND     EXE      6960 11-11-85   6:28p
	BIND     DOC      1821 11-12-85  11:21a
	PUZZLE   EXE      9440 10-23-85   3:44p
	CHASE    EXE      7552 11-08-85   3:35p
	FUSE     EXE      4794 10-31-85  11:07a
	CUBE     EXE     13360 10-23-85   4:22p
	PALETTE  EXE      3750 06-10-85   4:29p
	BOXES    EXE      3738 11-06-85   5:08p
	MEASLES  EXE      3210 11-11-85   1:21p
	SPECTRUM EXE      3734 06-16-85   6:20p
	       12 file(s)      58359 bytes
	
	Directory of A:\NODEBUG
	
	.            <DIR>     08-11-86   8:37a
	..           <DIR>     08-11-86   8:37a
	USER     SYM     19060 05-22-86   3:49a
	USER     EXE    122416 05-22-86   3:49a
	NODEBUG  SUM        43 08-06-86  10:43a
	        5 file(s)     141519 bytes
	
	Total files listed:
	       27 file(s)     346271 bytes
	                        3072 bytes free
